@@ -538,10 +538,6 @@ int parseAreaOption(const s_fidoconfig *config, char *option, s_area *area)
          return 1; // error
       }
    }
-   else if (stricmp(option, "dupesize")==0) {
-      area->dupeSize = (UINT) strtol(strtok(NULL, " \t"), &error, 0);
-      if ((error != NULL) && (*error != '\0')) return 1;    // error
-   }
    else if (stricmp(option, "dupehistory")==0) {
       area->dupeHistory = (UINT) strtol(strtok(NULL, " \t"), &error, 0);
       if ((error != NULL) && (*error != '\0')) return 1;    // error
@@ -682,7 +678,6 @@ int parseArea(const s_fidoconfig *config, char *token, s_area *area)
    area->useAka = config->addr;
 
    // set default parameters of dupebase
-   area->dupeSize = 10;   /* 2^10=1024 dupes minimum*/
    area->dupeHistory = 7; /* 7 days */
 
    // set default group for reader
