@@ -3,6 +3,12 @@ fidoconfig 0.10
 (released on Mon May 22 14:58:56 CEST 2000)
 
 ----- cvs ci ------
+Sat May 27 10:21:30 NOVST 2000
+max:
+* dupe base type set to hashdupes with msgid as default
+* remove dupeSize (unused)
+
+----- cvs ci ------
 Thu May 25 15:22:21 NOVST 2000
 max:
 * check if path already have been parsed (fix possible memory leaks)
